# AdvancedCpp

./: .gitignore  CMakeLists.txt  README.md
cmake/: ConfigGBench.cmake  DownloadProject.cmake
ex01/: README.md
ex01/task1/: a.out  hello_boost.cc
ex01/task2/: out.txt  vec.cc
ex01/task3/: CMakeLists.txt  GTest  stack.cc  stack.h  stack_test.cc
ex01/task4/cmake/: CMakeLists.txt
ex01/task4/cmake/app/: app.cc
ex01/task4/cmake/libBar/: bar.cc  bar.h
ex01/task4/cmake/libBaz/: baz.cc
ex01/task4/libBaz/: baz.h
ex01/task4/libFoo/: foo.cc  foo.h
ex02/: CMakeLists.txt  DGraph.cpp  DGraph.h  README.md  SPECIFICATION.md  Source.cpp  backup_builder.cpp  backup_builder.h  improvments_ex11.txt  pitfalls.md  stage_file_entry.cpp  stage_file_entry.h  vcs_utility.cpp  vcs_utility.h
ex02/bench/: CMakeLists.txt  commit_files.cpp  custom_benchmark.h
ex02/cmake/: FindBoost.cmake  FindCPPexperimental.cmake  FindSDL2_mixer.cmake
ex02/src/: DGraph.cpp  backup_builder.cpp  vcs_utility.cpp  vcs_utility.h
ex02/task1_and_2/: CMakeLists.txt  DGraph.cpp  DGraph.h  Source.cpp  VCS  backup_builder.cpp  backup_builder.h  order_structure_convention.txt  stage_file_entry.cpp  stage_file_entry.h  vcs_utility.cpp  vcs_utility.h
ex02/task1_and_2/.vcs_info_folder/user_files/: Source.cpp
ex02/task1_and_2/temp/: Source.cpp
ex02/test/: CMakeLists.txt  integration_test.cpp  unit_test.cpp
ex03/: CMakeLists.txt  README.md
ex03/task1/: main.cpp  memory_leaks.txt  my_shared_ptr.h  my_unique_ptr.cpp  my_unique_ptr.h
ex03/task2/: assembly.txt  main.cpp
ex03/task3/: Readme.md  clang.out  gpp.out  iterations.cc
ex03/task4/: Result.txt  clang-5.0-O2-falg-assembler-code.txt  clang_exec.out  gcc-7.2-O2-flag-assebler-code.txt  gcc_exec.out  strange.cc
ex03/task5/: Readme.md  bubble_sort  bubble_sort.c  gdb.txt
ex04/: README.md  roguelike.md  team_05_changes.txt  team_05_mecanic_1.txt  team_05_mecanic_2.txt  team_05_refactoring.txt  team_05_roadmap.txt
ex04/maps/: definition_of_maps.txt  map_v1.txt  map_v2.txt  map_v3.txt  map_v4.txt
ex04/roguelike/: Area.cpp  CMakeLists.txt  Camera.cpp  Tile.cpp  roguelike.sln  roguelike.vcxproj
ex04/roguelike/cmake/: FindSDL_mixer.cmake  defaults.cmake
ex04/roguelike/include/: Area.h  Camera.h  Grenade.h  Map.h  Potion.h  Tile.h  area.h  camera.h  chrono_timer.h  entity.h  enviorment_variables.h  game.h  map.h  menu.h  menu_item.h  resource_loader.h  sound.h  sprite_set.h  tile.h  weapon.h
ex04/roguelike/include/entities/: enemy.h  pickable_items.h  player.h  projectile.h
ex04/roguelike/include/logic/: logic.h
ex04/roguelike/include/utils/: chrono_timer.h  logging.h  random.h  vec2.h
ex04/roguelike/maps/: 1.area
ex04/roguelike/resources/maps/: 1.area  1.map  left.map  top.map  topleft.map
ex04/roguelike/resources/sounds/: flint.aiff
ex04/roguelike/src/: Grenade.cpp  area.cc  camera.cc  chrono_timer.cc  entity.cc  game.cc  main.cc  map.cc  menu.cpp  resource_loader.cc  sound.cpp  sprite_set.cc  tile.cpp  weapon.cc
ex04/roguelike/src/entities/: enemy.cc  pickable_item.cpp  player.cc  projectile.cc
ex04/roguelike/src/logic/: logic.cc
ex04/roguelike/src/utils/: random.cc  vec2.cc
ex05/: README.md
ex05/src/: CMakeLists.txt  Person.cpp  Person.h
ex05/src/task1/: Person.cpp  Person.h
ex05/src/task1_and_2/: Person.cpp  Person.h  Source.cpp
ex05/src/task2/: person_test.cpp
ex05/src/task3/: Source.cpp
ex07/: CMakeLists.txt  readme.md
ex07/task_1_2_3/: BiLinkedList.h  MyVector.h  Source.cpp
ex09/: CMakeLists.txt  README.md  main.cpp
ex09/task1/: vec.h
ex09/task3/: Source.cpp
ex10/: README.md  task1.cpp
ex10/task2/: Factorial.h  Source.cpp
ex11/taks3/Dll1/Debug/: Dll1.exp  Dll1.ilk  Dll1.lib
ex11/taks3/Dll1/Dll1/: Dll1.cpp  Dll1.vcxproj.filters  Event.h  EventHandlerh.h  PrintEvent.h  stdafx.h
ex11/taks3/EventBased/Debug/: EventBased.exp  EventBased.ilk  EventBased.lib
ex11/taks3/EventBased/EventBased/: CMakeLists.txt  EventBased.vcxproj.filters  EventHandler.cpp  EventHandler.h  ExecutableEvent.cpp  ExecutableEvent.h  PluginSetupAPI.h  PrintEvent.h  QuitEvent.h  Source.cpp
ex11/task1/: team_05_changes_to_vcs.txt
ex11/task2/Calculator/: Calculator.pro  button.h  calculator.cpp  calculator.h  main.cpp
